Aula de Display Flex

--- a/flex.html
+++ b/flex.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/estilo.css">
     <title>Display Flex</title>
 </head>
 <body>
-    <h1>Display Flex Aqui</h1>
+    <div class="container">
+        <div>
+            <p>Display Flex Aqui</p>
+        </div>
+        <div>
+            <p>Matheus</p>
+        </div>
+        <div>
+            <p>Pw-AMS</p>
+        </div>
+    </div>
 </body>
 </html>
