--- a/flex.html
+++ b/flex.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <div class="container">
-        <div>
+        <div class="item-menu">
             <p>Display Flex Aqui</p>
         </div>
-        <div>
+        <div class="item-menu">
             <p>Matheus</p>
         </div>
-        <div>
+        <div class="item-menu">
             <p>Pw-AMS</p>
         </div>
     </div>
