--- a/flex.html
+++ b/flex.html
@@ -17,6 +17,11 @@
         <div class="item-menu">
             <p>Pw-AMS</p>
         </div>
+        <div class="item-menu">
+            <a href="index.html">
+                Casa
+            </a>
+        </div>
     </div>
 </body>
 </html>
