--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <ol>
         <li><a href="flex.html">Display Flex</a></li>
-        <li>Bingo</li>
+        <li><a href="Atividade/index.html">Bingo</a></li>
         <li>Pokedex</li>
     </ol>
 </body>
